# Essentials-Tools

./: README.md  pyproject.toml
inputs/: Trainer Battles.xlsx
outputs/: trainers.txt
src/trainer/: main.py  models.py  writer.py
src/wild/: main.py
